--- a/html/main_content.html
+++ b/html/main_content.html
@@ -1,4 +1,5 @@
 {{define "main_content"}}
+<link rel="stylesheet" href="/styles/table.css">
 <div class="main-container">
     <!--  
     <div class="main-header">
@@ -20,7 +21,7 @@
             {{with(index .DeviceAssets 0) }} {{.Name   }} {{end}}
             
           </h3>
-          <button class="content-button">Start free trial</button>
+          <button class="content-button">#TODO add button or smt</button>
          
          </div>
         </div>
