some life changers

--- a/html/base.html
+++ b/html/base.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
+  <script src="https://unpkg.com/htmx.org@1.9.4"></script>
   <meta charset="UTF-8">
   <title>Golang simple website</title>
  
