added edit button, added edit suport for the front and not the backend , and some small UI changes

--- a/html/left_side.html
+++ b/html/left_side.html
@@ -25,7 +25,9 @@
     </div>
     -->
     <div class="side-wrapper">
-        <a href="/createNewDev/">  <button class="content-button">#TODO </button></a>
+        <a href="/createNewDev/">  <button class="content-button">Create New Device </button></a>
+        <br>
+        <br>
      <div class="side-title">Main Devices</div>     
      <div class="side-menu">
         
